[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Rocket.gd" type="Script" id=1]
[ext_resource path="res://Assets/Rocket.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 45 )

[node name="Rocket" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 1.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="RightThruster" type="RayCast2D" parent="."]
position = Vector2( 30, -45 )
cast_to = Vector2( 1, 0 )

[node name="LeftThruster" type="RayCast2D" parent="."]
position = Vector2( -30, -45 )
cast_to = Vector2( -1, 0 )

[node name="BaseThrust" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -15 )
